--- a/Gym/src/frontend/AdminLogin.form
+++ b/Gym/src/frontend/AdminLogin.form
@@ -29,12 +29,12 @@
                   <Component id="PasswordLabel" max="32767" attributes="0"/>
                   <Component id="Usernamelabel" pref="251" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="passwordInput" min="-2" pref="137" max="-2" attributes="0"/>
-                  <Component id="UsernameInput1" min="-2" pref="137" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="PasswordInput" min="-2" pref="180" max="-2" attributes="0"/>
+                  <Component id="UsernameInput" min="-2" pref="180" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
@@ -46,15 +46,21 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="Usernamelabel" alignment="3" min="-2" pref="53" max="-2" attributes="0"/>
-                  <Component id="UsernameInput1" alignment="3" min="-2" pref="53" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
+                      <Component id="Usernamelabel" min="-2" pref="53" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="UsernameInput" min="-2" pref="53" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="PasswordLabel" alignment="3" min="-2" pref="58" max="-2" attributes="0"/>
-                  <Component id="passwordInput" alignment="3" min="-2" pref="53" max="-2" attributes="0"/>
+                  <Component id="PasswordInput" alignment="3" min="-2" pref="53" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="29" max="32767" attributes="0"/>
               <Component id="LoginButton" min="-2" pref="39" max="-2" attributes="0"/>
@@ -100,15 +106,9 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="LoginButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="passwordInput">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="passwordInputActionPerformed"/>
-      </Events>
+    <Component class="javax.swing.JTextField" name="PasswordInput">
     </Component>
-    <Component class="javax.swing.JTextField" name="UsernameInput1">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UsernameInput1ActionPerformed"/>
-      </Events>
+    <Component class="javax.swing.JTextField" name="UsernameInput">
     </Component>
   </SubComponents>
 </Form>
