--- a/Gym/src/frontend/RemoveTrainerWindow.form
+++ b/Gym/src/frontend/RemoveTrainerWindow.form
@@ -25,8 +25,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Component id="TrainerIdlabel" min="-2" pref="113" max="-2" attributes="0"/>
-              <EmptySpace pref="28" max="32767" attributes="0"/>
-              <Component id="TrainerIdInput" min="-2" pref="158" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="InputId" pref="168" max="32767" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="RemoveTrainerButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
@@ -39,8 +39,8 @@
               <EmptySpace min="-2" pref="92" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="TrainerIdlabel" alignment="3" min="-2" pref="56" max="-2" attributes="0"/>
-                  <Component id="TrainerIdInput" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="RemoveTrainerButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="InputId" alignment="3" min="-2" pref="56" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="152" max="32767" attributes="0"/>
           </Group>
@@ -58,11 +58,6 @@
         <Property name="opaque" type="boolean" value="true"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="TrainerIdInput">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TrainerIdInputActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JButton" name="RemoveTrainerButton">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -76,6 +71,8 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="RemoveTrainerButtonActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JTextField" name="InputId">
     </Component>
   </SubComponents>
 </Form>
